<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetanguloFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/frag_02"
        android:textColor="#5E35B1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/calc"
        app:layout_constraintStart_toStartOf="@+id/inAltura"
        app:layout_constraintTop_toBottomOf="@+id/inAltura" />

    <EditText
        android:id="@+id/inBase"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:hint="@string/in_base"
        android:inputType="numberSigned"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/inAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/inAltura"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="238dp"
        android:ems="10"
        android:hint="@string/in_altura"
        android:inputType="numberSigned"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/inBase"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outAreaRet"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/outPerimetroRet"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outAreaRet"
        app:layout_constraintStart_toStartOf="@+id/outAreaRet"
        app:layout_constraintTop_toTopOf="@+id/outAreaRet" />

    <Button
        android:id="@+id/btnAreaRet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:text="@string/btnArea"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPerimetroRet"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPerimetroRet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="55dp"
        android:text="@string/btnPerimetro"
        app:layout_constraintStart_toEndOf="@+id/btnAreaRet"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>